ubiquity (2.5.33) UNRELEASED; urgency=low

  * Shut down the debconf-communicator instance started in DM.run.  This
    should reduce the number of spurious crash reports we get.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 29 Mar 2011 11:50:34 +0100

ubiquity (2.5.32) natty; urgency=low

  * Fix test failure on non-x86 architectures.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 29 Mar 2011 10:29:20 +0100

ubiquity (2.5.31) natty; urgency=low

  * Put build-dependencies in the right place.
  * Add python-apt to the build-depends for the test harness.
  * Use the standard nocheck DEB_BUILD_OPTIONS argument instead of
    UBIQUITY_NO_TESTS. Thanks Steve Langasek!
  * Run the tests on all architectures.
  * Don't feed jockey's output into debconf (LP: #739632).

 -- Evan Dandrea <ev@ubuntu.com>  Mon, 28 Mar 2011 23:21:15 +0100

ubiquity (2.5.30) natty; urgency=low

  [ Evan Dandrea ]
  * Add an error message for apt-clone failing.
  * Do not consider Windows Recovery partitions in the list of operating
    systems.
  * Add unit tests, which can be run via ./tests/run or by building the
    package.  To override a failing test causing the package build to
    fail, use the UBIQUITY_NO_TESTS environment variable.
  * Divert initctl around apt-clone to prevent packages with Upstart
    jobs from failing to be reinstalled.
  * Ensure that the partition description labels all wrap at the same
    point (LP: #741664).
  * Move test dependencies into build-depends.  Thanks Colin Watson!
  * Move the apt-clone working directory into /var/log/installer at the
    end of installation (LP: #739492).
  * Set the next button back to its original label once done calculating
    its size.
  * Automatic update of included source packages: migration-assistant
    0.6.9, user-setup 1.28ubuntu14.

  [ Colin Watson ]
  * Start debconf in ubiquity.i18n.reset_locale if it isn't already running
    (LP: #649895).
  * Remove grub_device_label from string_extended, now that the boot loader